--- a/PublicArt/Views/SingleArtPhotosCollectionViewCell.xib
+++ b/PublicArt/Views/SingleArtPhotosCollectionViewCell.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SingleArtPhotosCollectionViewCell" customModule="ArtCity" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SingleArtPhotosCollectionViewCell" customModule="PublicArt" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -17,13 +17,16 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YDu-tw-vrg">
                                 <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-GC-dK2">
+                                <rect key="frame" x="82" y="82" width="37" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="YDu-tw-vrg" firstAttribute="leading" secondItem="nGu-VZ-K2q" secondAttribute="leading" id="GeM-f8-TV0"/>
                             <constraint firstAttribute="bottom" secondItem="YDu-tw-vrg" secondAttribute="bottom" id="K7g-yH-vUh"/>
+                            <constraint firstItem="Bd6-GC-dK2" firstAttribute="centerX" secondItem="YDu-tw-vrg" secondAttribute="centerX" id="Pac-WB-HBp"/>
+                            <constraint firstItem="Bd6-GC-dK2" firstAttribute="centerY" secondItem="YDu-tw-vrg" secondAttribute="centerY" id="Rd8-Jl-E7F"/>
                             <constraint firstAttribute="trailing" secondItem="YDu-tw-vrg" secondAttribute="trailing" id="URQ-19-Hvo"/>
                             <constraint firstItem="YDu-tw-vrg" firstAttribute="top" secondItem="nGu-VZ-K2q" secondAttribute="top" id="aKZ-sc-IvQ"/>
                         </constraints>
@@ -38,6 +41,7 @@
                 <constraint firstItem="nGu-VZ-K2q" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="nRs-Qm-bvl"/>
             </constraints>
             <connections>
+                <outlet property="activityIndicator" destination="Bd6-GC-dK2" id="wex-lp-sNQ"/>
                 <outlet property="imageView" destination="YDu-tw-vrg" id="xeM-BE-hkr"/>
             </connections>
         </collectionViewCell>
