--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -89,6 +89,7 @@
         <!--Art Pieces Collection View Controller-->
         <scene sceneID="3OF-YD-2vk">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rvd-ej-nva" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <collectionViewController storyboardIdentifier="ArtPiecesViewControllerID" id="3UN-qf-gh0" customClass="ArtPiecesCollectionViewController" customModule="PublicArt" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="37X-E6-bx6">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -121,7 +122,6 @@
                         <segue destination="7LR-GA-vD2" kind="show" id="ls7-Lq-f2r"/>
                     </connections>
                 </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rvd-ej-nva" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2281" y="407"/>
         </scene>
@@ -428,13 +428,6 @@
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Touch Photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cm-oA-eUa">
-                                                        <rect key="frame" x="8" y="286" width="584" height="29"/>
-                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GAf-hg-gN0" userLabel="artTitleInfoView">
                                                         <rect key="frame" x="108" y="614" width="22" height="22"/>
                                                         <constraints>
@@ -475,6 +468,16 @@
                                                             <segue destination="oad-Te-es5" kind="presentation" identifier="LocationButtonToMapID" id="ICm-2k-qAt"/>
                                                         </connections>
                                                     </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Zoom" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cm-oA-eUa">
+                                                        <rect key="frame" x="225" y="285" width="150" height="29"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="150" id="0N0-0z-4y2"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
@@ -490,14 +493,13 @@
                                                     <constraint firstItem="w3O-IE-Dub" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" constant="32" id="JBx-Zl-rXY"/>
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GAf-hg-gN0" secondAttribute="trailing" constant="16" id="N2B-JJ-di5"/>
                                                     <constraint firstItem="hxv-6W-p0P" firstAttribute="height" secondItem="fPE-BJ-2LA" secondAttribute="height" id="QRz-B2-6CK"/>
-                                                    <constraint firstAttribute="trailing" secondItem="3Cm-oA-eUa" secondAttribute="trailing" constant="8" id="S39-aO-B3J"/>
-                                                    <constraint firstItem="3Cm-oA-eUa" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" constant="8" id="ShL-t8-5f8"/>
                                                     <constraint firstItem="w3O-IE-Dub" firstAttribute="top" secondItem="poq-xo-sc2" secondAttribute="bottom" constant="8" id="W67-em-bq4"/>
                                                     <constraint firstItem="e4F-uZ-ISZ" firstAttribute="leading" secondItem="xjK-Hn-Sxv" secondAttribute="trailing" constant="4" id="Ykm-yX-yQR"/>
                                                     <constraint firstItem="VDp-Vs-vO4" firstAttribute="leading" secondItem="w3O-IE-Dub" secondAttribute="leading" id="Zds-ag-QC1"/>
                                                     <constraint firstItem="poq-xo-sc2" firstAttribute="leading" secondItem="jWh-d9-GTp" secondAttribute="leading" id="crN-0p-9e1"/>
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fPE-BJ-2LA" secondAttribute="trailing" constant="16" id="d91-by-agK"/>
                                                     <constraint firstAttribute="trailing" secondItem="VDp-Vs-vO4" secondAttribute="trailing" constant="16" id="dg4-0n-RFl"/>
+                                                    <constraint firstItem="3Cm-oA-eUa" firstAttribute="centerX" secondItem="poq-xo-sc2" secondAttribute="centerX" id="fIV-hU-jSj"/>
                                                     <constraint firstItem="poq-xo-sc2" firstAttribute="top" secondItem="jWh-d9-GTp" secondAttribute="top" id="g5h-Rw-Wyn"/>
                                                     <constraint firstItem="sdV-Pl-et5" firstAttribute="top" secondItem="VDp-Vs-vO4" secondAttribute="bottom" constant="8" id="jiF-bO-VTD"/>
                                                     <constraint firstItem="fPE-BJ-2LA" firstAttribute="leading" secondItem="hxv-6W-p0P" secondAttribute="trailing" constant="4" id="uyv-mV-piB"/>
@@ -536,13 +538,7 @@
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <navigationItem key="navigationItem" id="iDf-Rh-oBO">
-                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="nhc-db-Oov">
-                            <connections>
-                                <action selector="actionButtonTouched:" destination="7LR-GA-vD2" id="9Xu-eP-iXG"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="iDf-Rh-oBO"/>
                     <connections>
                         <outlet property="artImageView" destination="poq-xo-sc2" id="xkl-zo-Ykw"/>
                         <outlet property="artTitleButton" destination="w3O-IE-Dub" id="vOU-lA-H95"/>
